--- a/main.css
+++ b/main.css
@@ -1,91 +1,63 @@
 html, body{
     height: 100%;
     margin: 0;
-    //background: url(../website_try/image/doge.jpg) no-repeat center center fixed;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    background: url(../website_try/image/background.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     font-family: "Trebuchet MS", Helvetica, sans-serif;
+    color: white;
 }
 
 .content{
     min-height: 100%;
     overflow: auto;
-}
-
-.nav_header{
-    margin: 0px;
     position: relative;
-}
-
-h1{
-    margin-left: 60px;
-}
-
-.header_links{
-    font-size: calc(20px+15vw);
-    top: 0;
-    width:300px;
-    right:0;
-    bottom: 0;
-    position:absolute;
-    margin: 0px;
-}
-
-.header_links li{
-    display: inline;
-    padding: 5px;
-}
-
-.header_links a{
-    color: black;
-    text-decoration: none;
 }
 
 .content_inside{
-    padding: 40px 20px 150px;
-    position: relative;
+    padding: 40px 20px 100px;
 
-    background: rgba(0,0,0,0.2);
-    color: white;
+    background: rgba(0,0,0,0.4);
     width: 500px;
     margin: 0 auto;
     margin-top: 100px;
+}
+
+.personal_info{
+    text-align: center;
 }
 
 .prof_pic{
     border-radius: 50%;
     height: auto;
     width: 200px;
-    position: absolute;
-    right: 10px;
-    top: 50px;
 }
 
-.personal_info{
-    padding-right: 200px;
+.personal_info a{
+    color: white;
+    text-decoration: none;
+    border-bottom: 1px solid white;
 }
-
 
 .footer{
     height: auto;
-    min-height: 50px;
-    margin-top: -50px;
     text-align: center;
     padding: 0px;
-    overflow: hidden;
+    background: rgba(0,0,0,0.2);
 }
 
 .line_break{
     width: 500px;
     margin: 0 auto;
-    border-top: 1px solid black;
+    border-top: 1.1px solid black;
 }
 
 .contact_me a{
-    font-size: 40px;
-    color: black;
+    font-size: calc(30px + 1vw);
+    color: white;
 }
 
 .copyright{
