--- a/main.css
+++ b/main.css
@@ -18,9 +18,9 @@ html, body{
 }
 
 .content_inside{
-    padding: 40px 20px 100px;
-
-    background: rgba(0,0,0,0.4);
+    padding: 40px 20px 80px;
+    background: rgba(0,0,0,0.45);
+    border-radius: 2.6%;
     width: 500px;
     margin: 0 auto;
     margin-top: 100px;
@@ -49,11 +49,12 @@ html, body{
     background: rgba(0,0,0,0.2);
 }
 
-.line_break{
+/*.line_break{
     width: 500px;
     margin: 0 auto;
     border-top: 1.1px solid black;
-}
+}*/
+
 .hover_animation{
     transition: transform .2s;
 }
