--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ html, body{
     height: 100%;
     margin: 0;
     font-family: "Trebuchet MS", Helvetica, sans-serif;
-    background: url(../website_try/image/background.jpg) no-repeat center center fixed;
+    background: url(../awpstew.github.io/image/background.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
