--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 html, body{
     height: 100%;
     margin: 0;
-    background: url(../awpstew.github.io/image/background.jpg) no-repeat center center fixed;
+    background: url(../image/background.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
