remove white space when scrolling

--- a/main.css
+++ b/main.css
@@ -10,6 +10,16 @@ html, body{
     color: white;
 }
 
+html {
+    overflow: hidden;
+    height: 100%;
+}
+
+body {
+    height: 100%;
+    overflow: auto;
+}
+
 .content{
     min-height: 100%;
     overflow: auto;
